Fix z-index issue on modals

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -94,36 +94,6 @@
   overflow: auto;
 }
 
-@media (max-width: 1000px) {
-  .footer { height: inherit; }
-  .footer-column {
-    width: 50%;
-    margin: 0;
-    padding: 50px 0 0 0;
-    text-align: center
-  }
-  .footer-column.logo {
-    width: 100%;
-    margin-left: 0;
-    padding-bottom: 25px;
-  }
-  .footer-column.social {
-    width: 50%;
-    margin: 0;
-    text-align: center;
-    padding: 50px 0 0 0;
-
-    .footer-listing {
-      .inline {
-        display: block;
-        margin: 0;
-      }
-    }
-  }
-  .feedback { margin: 16px auto; }
-  .footer-column.logo .btn { width: 341px; height: 80px; font-size: 24px; }
-}
-
 .modal {
   position: fixed;
   top: 0;
@@ -131,6 +101,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  z-index: 500;
   &.hidden {
     display: none;
   }
@@ -222,6 +193,36 @@
       }
     }
   }
+}
+
+@media (max-width: 1000px) {
+  .footer { height: inherit; }
+  .footer-column {
+    width: 50%;
+    margin: 0;
+    padding: 50px 0 0 0;
+    text-align: center
+  }
+  .footer-column.logo {
+    width: 100%;
+    margin-left: 0;
+    padding-bottom: 25px;
+  }
+  .footer-column.social {
+    width: 50%;
+    margin: 0;
+    text-align: center;
+    padding: 50px 0 0 0;
+
+    .footer-listing {
+      .inline {
+        display: block;
+        margin: 0;
+      }
+    }
+  }
+  .feedback { margin: 16px auto; }
+  .footer-column.logo .btn { width: 341px; height: 80px; font-size: 24px; }
 }
 
 @media (max-width: 1060px) {
