--- a/src/app/layouts/account/dashboard/dashboard.component.scss
+++ b/src/app/layouts/account/dashboard/dashboard.component.scss
@@ -256,6 +256,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  z-index: 500;
 
   .background {
     position: fixed;
